--- a/sass/components/_mobile-nav.scss
+++ b/sass/components/_mobile-nav.scss
@@ -23,6 +23,7 @@
         &--item {
             display: flex;
             align-items: center;
+            margin-bottom: 1.6rem;
         }
     }
 
@@ -34,6 +35,7 @@
 
     &__link {
         text-decoration-color: $color-primary;
+        text-decoration-thickness: .3px;
         font-size: 3rem;
         font-weight: 700;
         color: $color-white;
