--- a/sass/layout/_stories.scss
+++ b/sass/layout/_stories.scss
@@ -25,7 +25,5 @@
         @media only screen and (max-width: $bp-small){
         }
     }
-    &__slide {
-        
-    }
+   
 }
